--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
   },
   "dependencies": {
     "debug": "3.1.0",
-    "dogapi": "2.8.3"
+    "dogapi": "github:hellodigit/node-dogapi#ef591d009e633c3bdae8d2d0c7d55cb2f93a6cea"
   }
 }
